# elements_of_computing_systems

./: .gitignore  Cargo.toml  README.md
hack_assembler/: Cargo.toml
hack_assembler/src/: assembly_io.rs  io.rs  lib.rs  parts.rs  pass.rs
hack_computer/: Cargo.toml
hack_computer/src/: main.rs
hack_interface/: Cargo.toml
hack_interface/resources/test/: example.hack
hack_interface/src/: hack_io.rs  lib.rs
hack_kernel/: Cargo.toml
hack_kernel/src/: chapter1_gates.rs  chapter2_arithmetic.rs  chapter3_sequenctial_logic.rs  chapter5_computer_architecture.rs  lib.rs
hack_tools/: Cargo.toml
hack_tools/resources/test/: example.asm  example.hack
hack_tools/src/: assembly.rs  assembly_io.rs  book_exercises.rs  hack_io.rs  lib.rs  string_io.rs
hack_virtual_machine/: Cargo.toml
hack_virtual_machine/src/: arithmetic.rs  branching.rs  function.rs  lib.rs  memory.rs  reader.rs
rust_elements_computing_systems/: Cargo.toml
rust_elements_computing_systems/src/: chapter1_gates.rs  chapter2_arithmetic.rs  chapter3_sequenctial_logic.rs  chapter5_computer_architecture.rs  lib.rs
