[package]
name = "hack_assembler"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "hack_assembler"
path = "src/lib.rs"

[[bin]]
name = "hack_assembler"
path = "src/main.rs"

[dependencies]
hack_kernel = {path = "../hack_kernel"}
hack_interface = {path = "../hack_interface"}