[package]
name = "hack_virtual_machine"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "hack_virtual_machine"

[dependencies]
hack_assembler = {path = "../hack_assembler"}
hack_interface = {path = "../hack_interface"}